--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1116,6 +1116,7 @@ p {
   .lead {
     font-size: 21px;
   }
+  
 }
 small,
 .small {
@@ -1259,6 +1260,7 @@ dt {
 dd {
   margin-left: 0;
 }
+
 @media (min-width: 768px) {
   .dl-horizontal dt {
     float: left;
@@ -1272,6 +1274,10 @@ dd {
   .dl-horizontal dd {
     margin-left: 180px;
   }
+ /* .text-center {
+      font-size:80px;
+      color: red;
+  }*/
 }
 abbr[title],
 abbr[data-original-title] {
@@ -1394,6 +1400,11 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+}
+.photo{
+    background-image: url("images/alumni/jothi.jpg");
+    width: 200px;
+    height: 200px;
 }
 @media (min-width: 768px) {
   .container {
