--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,84 @@
 @import url('font-awesome.css');
 /* ==== overwrite bootstrap standard ==== */
 @import url('animate.css');
+.mentor{
+    text-align: center;
+   width:50%;
+   float:left;
+    display: inline-bloack;
+}
+
+.gmail{
+    text-decoration: none;
+}
+.gmail:hover
+{
+    color:deeppink;
+    
+}
+
+.contacts a{
+    padding: 6px;
+}
+
+.fb:hover{
+    color: blue;
+    
+}
+.insta:hover{
+    color: orange;
+    
+}
+.link:hover{
+    color: lightskyblue;
+}
+.ph{
+    color: #1D44FE;
+    transition:1s;
+}
+.contacts:hover{
+    background-color: rgba(247, 249, 249,.8);
+    transition: .5s;
+    transform :scale(1.1,1.1);
+}
+
+.ph:hover{
+    color: black;
+    font-size: 15px;
+    transition: 1s;
+}
+
+
+.contacts
+{
+    width:400px;
+    
+    display: inline-block;
+    border-radius: 5px 5px 5px 5px;
+    box-shadow: 0px 1px 5px #888;
+    padding: 20px;
+    margin: 10px;
+    transition: .5s;
+  
+    
+}
+@media (max-width:768px)
+{
+    .contacts{
+       float: none;
+       transition: none;
+       width: 320px;
+        
+    }
+    .contacts:hover{
+           transform: none;
+    }
+    .mentor{
+        float: none;
+        width: 100%;
+    }
+}
+
 .proj{
     width: 800px;
     height:700px;
@@ -36,13 +114,40 @@ content: "\f013";
 }
 
 .c1{
-    width: 50%;
+    
     height:100%;
     float:left;
-   
+    display: inline-block;
+    text-align: center;
+   float:left;
   // border-right: 1px solid rgba(128,128,128,.4);
    
-    min-width: 300px;
+    width:50%;
+    padding: 10px;
+    border-right: 2px solid black;
+}
+@media (max-width:768px){
+    .c1{
+        width:220px;
+        border-bottom: 2px solid black;
+        border-right:none;
+    }
+}
+.c2
+{
+  text-align: center;
+ width: 100%;
+    display: inline-block;
+}
+@media (min-width:768px){
+    .c2{
+    font-size:17px;
+    font-family: sans-serif;
+    font-weight: 100;
+    }
+    .mentor {
+        font-size: 17px;
+    }
 }
 .con{
     width: 100%;
@@ -69,7 +174,8 @@ hi,h2,h3,h4,h5,h6 {
 
 p {
 	color:#333;
-	font-size:13px;
+	font-family: "Source Sans Pro", "Arial", sans-serif;
+        font-size: 16px;
 }
 a {
     text-decoration:none;
@@ -377,7 +483,16 @@ a:hover {
   font-size:20px;
   
 }
-
+.partners{
+    display:inline-block;
+    text-align: center;
+    
+}
+@media (max-width:768px){
+    .partners{
+        margin-left:-40px;
+    }
+}
 .partners ul {
   list-style: none;
   margin: 0;
@@ -387,7 +502,7 @@ a:hover {
 .partners ul li{
   display: inline-block;
   float: left;
-  width: 20%;
+  width: 100%;
 }
 
 .partners ul li a img {
@@ -1179,6 +1294,9 @@ textarea#message{
 
 #contact-page .contact-wrap {
   margin-top: 20px;
+  text-align: center;
+  position: relative;
+  
 }
 
 .center h2{
