--- a/css/profile.css
+++ b/css/profile.css
@@ -3,7 +3,8 @@
     max-width: 300px;
     margin: 50px;
     text-align: center;
-   float: left;
+    
+  display: inline-block;
    padding: 40px;
 }
 
