--- a/css/profile.css
+++ b/css/profile.css
@@ -1,16 +1,20 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+    
     margin: 50px;
+   width: 400px;
+   
+    
     text-align: center;
     
   display: inline-block;
-   padding: 40px;
+   
 }
 
 .title1 {
-    color: grey;
-    font-size: 18px;
+    color:#aaa;
+    font-size: 26px;
+    font-weight: 500;
 }
 
 but1 {
@@ -38,4 +42,11 @@ but1 {
     margin:auto;
     background-color: red;
     
+}
+@media(max-width:768px){
+    .card{
+        margin: 0px;
+        padding: 0px;
+        
+    }
 }
