--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,284 @@
 @import url('font-awesome.css');
 /* ==== overwrite bootstrap standard ==== */
 @import url('animate.css');
+.c{
+    padding-top: 40px;
+}
+.ion{
+    margin-top: 50px;
+    height: auto;
+    padding: 15px;
+    text-align: center;
+}
+.cent{
+    text-align: center;
+   padding-top: 40px;
+   
+}
+.dis{
+    color:white;    
+    font-size: 1.3em;
+    font-weight: 200;
+    font-family:  GT Walsheim,Sans-serif;
+}
+.dis1{
+    color:white;
+    font-size:1.5em;
+    font-weight: 700;
+    font-family:  Palanquin, Montserrat;
+}
+.college{
+    width: 100%;
+    height:auto;
+    color:white;
+   
+    text-align: center;
+}
+.logo2{
+    height: 10em;
+    width: 8em;
+    
+}
+.colo{
+   
+   background-color: #87CEFA;
+   padding:20px;
+   width:100%;
+   height:250px;
+    
+}
+.al{
+    width: 80%;
+    height:2px;
+    display: inline-block;
+    background-color: 	#DCDCDC;
+}
+.title2{
+    letter-spacing: 3px;
+    font-weight: 400;
+    
+    font-family: Good Times;
+}
+.rectangle{
+    height: 2px;
+    align:center;
+    position: absolute;
+    background-color: black;
+    
+    animation-name: rec;
+    animation-timing-function: .3s ease-in;
+    animation-duration: 3s;
+   
+    animation-iteration-count: infinite;
+    
+}
+.rectangle1{
+      height: 2px;
+  position: absolute;
+    z-index: -100000;
+  
+   
+    
+    background-color: #6666ff;
+    
+    animation-name: rec1;
+    animation-timing-function: .9s ease-in;
+    animation-duration: 3s;
+   
+    animation-iteration-count: infinite;
+}
+@keyframes rec{
+    0% {width:0px;left:50%}
+    30% {width:30%;left:60%}
+    70% {width:30%;left:10%}
+    100% {width:0px;left:50%}
+}
+@keyframes rec1{
+    0% {width:0px;left:100%}
+    25% {width:30%;right:60%}
+    50% {width:2px;height:2px;left:10%;top:80%}
+    75% {width:2px;height:30%;left:10%;top:50%}
+    100% {width:0px;left:10%;top:0%}
+}
+#page{
+    height: auto;
+    width: auto;
+    animation-name: k;
+    animation-duration: 2s;
+    
+
+}
+@keyframes k{
+    from {opacity: 0}
+    to {opacity: 1}
+}
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+section.wrapper {
+  padding: 40px 0;
+  position: absolute;
+  left:45%;
+  top:40%;
+  z-index: 1;
+  animation-name: k;
+    animation-duration: 2s;
+    animation-timing-function: ease-in-out; 
+}
+section.wrapper.dark {
+  background: #313134;
+}
+
+div.spinner {
+  -moz-animation: rotate 10s infinite linear;
+  -webkit-animation: rotate 10s infinite linear;
+  animation: rotate 10s infinite linear;
+  position: relative;
+  display: block;
+  margin: auto;
+  width: 142px;
+  height: 142px;
+}
+div.spinner i {
+  -moz-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+  -webkit-animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+  animation: rotate 3s infinite cubic-bezier(0.09, 0.6, 0.8, 0.03);
+  -moz-transform-origin: 50% 100% 0;
+  -webkit-transform-origin: 50% 100% 0;
+  transform-origin: 50% 100% 0;
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  left: 50%;
+  border: solid 6px transparent;
+  border-bottom: none;
+}
+div.spinner i:nth-child(1) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 0.3, 0.12, 0.03);
+  width: 44px;
+  height: 22px;
+  margin-top: -22px;
+  margin-left: -22px;
+  border-color: #3333ff;
+  border-top-left-radius: 36px;
+  border-top-right-radius: 36px;
+}
+div.spinner i:nth-child(2) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 0.6, 0.24, 0.03);
+  width: 58px;
+  height: 29px;
+  margin-top: -29px;
+  margin-left: -29px;
+  border-color: #4d4dff;
+  border-top-left-radius: 42px;
+  border-top-right-radius: 42px;
+}
+div.spinner i:nth-child(3) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 0.9, 0.36, 0.03);
+  width: 72px;
+  height: 36px;
+  margin-top: -36px;
+  margin-left: -36px;
+  border-color: #6666ff;
+  border-top-left-radius: 48px;
+  border-top-right-radius: 48px;
+}
+div.spinner i:nth-child(4) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 1.2, 0.48, 0.03);
+  width: 86px;
+  height: 43px;
+  margin-top: -43px;
+  margin-left: -43px;
+  border-color: #8080ff;
+  border-top-left-radius: 54px;
+  border-top-right-radius: 54px;
+}
+div.spinner i:nth-child(5) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 1.5, 0.6, 0.03);
+  width: 100px;
+  height: 50px;
+  margin-top: -50px;
+  margin-left: -50px;
+  border-color: #9999ff;
+  border-top-left-radius: 60px;
+  border-top-right-radius: 60px;
+}
+div.spinner i:nth-child(6) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 1.8, 0.72, 0.03);
+  width: 114px;
+  height: 57px;
+  margin-top: -57px;
+  margin-left: -57px;
+  border-color: #b3b3ff;
+  border-top-left-radius: 66px;
+  border-top-right-radius: 66px;
+}
+div.spinner i:nth-child(7) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 2.1, 0.84, 0.03);
+  width: 128px;
+  height: 64px;
+  margin-top: -64px;
+  margin-left: -64px;
+  border-color: #ccccff;
+  border-top-left-radius: 72px;
+  border-top-right-radius: 72px;
+}
+div.spinner i:nth-child(8) {
+  -moz-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+  -webkit-animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+  animation-timing-function: cubic-bezier(0.09, 2.4, 0.96, 0.03);
+  width: 142px;
+  height: 71px;
+  margin-top: -71px;
+  margin-left: -71px;
+  border-color: #e6e6ff;
+  border-top-left-radius: 78px;
+  border-top-right-radius: 78px;
+}
+
+@-moz-keyframes rotate {
+  to {
+    -moz-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes rotate {
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  to {
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
 .alumnii{
     text-align: center;
     width: 100%;
     height: auto;
+    
 }
 .img-fac{
     width: 230px;
@@ -111,6 +385,25 @@
     }
     .img-fac{
         transform: scale(.7);
+    }
+    section.wrapper{
+        transform: scale(.6);
+        left: 31%;
+        top:30%;
+    }
+    .card{
+        transform: scale(.8); 
+        margin: 0px;
+        padding: 0px;
+        max-width: 300px;
+       
+    }
+    .cent{
+        padding: 0px;
+        border-bottom: 2px solid grey;
+    }
+    .c{
+        padding:none;
     }
 }
 
@@ -465,7 +758,11 @@ a:hover {
 
 .feature {
 	padding:50px;
+       
+        
 }
+
+
 
 .text-center i {
 	font-size:40px;
@@ -497,8 +794,10 @@ a:hover {
 }
 
 #partner {
-  background: url(../images/partners/partner_bg.png) 50% 50% no-repeat;
-  background-size: cover;
+   background-image: url('../images/index/back/bk3.jpg');
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;  
 }
 
 #partner {
@@ -681,8 +980,13 @@ a:hover {
 
 
 .about {
-	background:rgba(0,0,0,.9);
+	
 	padding:50px;
+         background-image: url('../images/index/back/bk2.jpg');
+        background-attachment: fixed;
+        background-size: cover;
+        
+        
 }
 
 .about h2 {
@@ -696,7 +1000,10 @@ a:hover {
 
 .our-team {
 	padding:50px;
-	background:#ddd;
+        
+	background-attachment: fixed;
+        background-size:initial;
+        background-image: url('../images/index/back/bk9.jpg');
 }
 
 .our-team h3 {
@@ -717,6 +1024,7 @@ a:hover {
 
 .lates {
 	padding:50px;
+       
 }
 
 .lates h2 {
@@ -739,7 +1047,7 @@ a:hover {
 ul.social-network {
 	list-style:none;
 	margin-top:20px;	
-	padding:10px;
+	padding:5px;
 	transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -781,9 +1089,18 @@ ul.social-network li a {
 }
 
 .copyright {
-	margin-top:30px;
+	padding: 10px;
+        color: #ccc;
+        text-align: center;
+        font-family: ARVO,ALEGREYA,sans-serif;
 }
-
+.font{
+    font-family: OPEN SANS,fantasy;
+    color: #aaa;
+    font-weight: 900;
+  padding-top:  15px;
+    text-align: center;
+}
 .copyright a {
 	color:#000;
 	text-transform:uppercase;
