--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,7 @@ div.spinner i:nth-child(8) {
     }
     .cent{
         padding: 0px;
+        padding-top: -20px;
         border-bottom: 2px solid grey;
     }
     .c{
