--- a/css/hover.css
+++ b/css/hover.css
@@ -4,7 +4,7 @@
   top: 50%;
   transform: translateY(-50%);
 	  margin: 0 auto;
-  width: 320px;  
+  width: 100%;  
 }
 .shape {
   stroke-dasharray: 140 540;
@@ -32,7 +32,7 @@
 @media (max-width:768px){
     .svg-wrapper{
         transform: scale(.7);
-       margin-left:  -20px;
+       
     }
     .ion{
         margin:0 auto;
