--- a/css/h.css
+++ b/css/h.css
@@ -57,3 +57,59 @@ and open the template in the editor.
 
 .openbtn:hover {
   background-color:transparent;}
+#overlay1 {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.9);
+  z-index: 2;
+  transition: 2s;
+  cursor: pointer;
+}
+
+#text1{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 50px;
+  color: white;
+  transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+}
+
+.hdd{
+    color:white;
+    text-align: center;
+    font-size: 25px;
+    font-weight: 400;
+   padding-bottom: 20px;
+    font-family: Verdana;
+}
+.hdd1{
+    color:#F2ECEC;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 150;
+    font-family: Verdana;
+}
+.hdd2{
+    color:#00BFFF;
+    font-family: Anton,Verdana;
+    letter-spacing: 1px;
+    font-size: 20px;
+}
+@media (max-width:768px)
+{
+    .hdd1{
+        width: 300px;
+        font-size: 14px;
+        font-weight: 60;
+        padding: 0px;
+    }
+}
