--- a/css/profile.css
+++ b/css/profile.css
@@ -1,9 +1,9 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    
-    margin: 50px;
-   width: 400px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
    
+   margin: 30px;
+   width: 400px;
+   height:530px;
     
     text-align: center;
     
@@ -42,11 +42,4 @@ but1 {
     margin:auto;
     background-color: red;
     
-}
-@media(max-width:768px){
-    .card{
-        margin: 0px;
-        padding: 0px;
-        
-    }
 }
